--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "A community directory of small businesses in Blewett, BC, Canada",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "eleventy --serve",
+    "build": "eleventy"
   },
   "author": "Agata Zurek",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@11ty/eleventy": "^0.11.0"
+  }
 }
