--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -6,7 +6,7 @@ media_folder: "static/images" # Media files will be stored in the public folder
 collections:
   - label: "Blewett Community Directory" # Used in the UI - as in, this is the label the cms editor will see
     name: "listings" # Used in routes, e.g., /admin/collections/blog
-    folder: "listings" # The path to the folder where the documents are stored
+    folder: "src/listings" # The path to the folder where the documents are stored
     extension: html # determines the file extension searched for when finding existing entries in a folder collection and it determines the file extension used to save new collection items
     create: true # Allow users to create new documents in this collection
     delete: true # prevents user from deleting items in collection
