--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,14 +4,14 @@ backend:
 site_url: https://blewett-community-directory.netlify.app/
 media_folder: "static/images" # Media files will be stored in the public folder
 collections:
-  - label: "directory listing" # Used in the UI - as in, this is the label the cms editor will see
+  - label: "Directory Listing" # Used in the UI - as in, this is the label the cms editor will see
     name: "listings" # Used in routes, e.g., /admin/collections/blog
     folder: "src/listings" # The path to the folder where the documents are stored
     extension: html # determines the file extension searched for when finding existing entries in a folder collection and it determines the file extension used to save new collection items
     create: true # Allow users to create new documents in this collection
     delete: true # prevents user from deleting items in collection
     fields: # The fields for each document, usually in front matter
-      - {label: "Business Name", name: "name", widget: "string"} # Widgets define the data type and interface for entry fields
+      - {label: "Business Name", name: "title", widget: "string"} # Widgets define the data type and interface for entry fields
       - {label: "Street Address", name: "address", widget: "string", required: false} # https://www.netlifycms.org/docs/widgets/
       - {label: "Website", name: "website", widget: "string", required: false}
       - {label: "Phone Number", name: "phone", widget: "string", pattern: ['^\d{3}-\d{3}-\d{4}$', 'Phone number must be 123-123-1234'], required: false}
