--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -15,4 +15,4 @@ collections:
       - {label: "Street Address", name: "address", widget: "string", required: false} # https://www.netlifycms.org/docs/widgets/
       - {label: "Website", name: "website", widget: "string", required: false}
       - {label: "Phone Number", name: "phone", widget: "string", pattern: ['^\d{3}-\d{3}-\d{4}$', 'Phone number must be 123-123-1234'], required: false}
-      - {label: 'Map', name: 'geometry', widget: 'map', default: '{"type":"Point","coordinates":[-117.3981482,49.4833842]}'} # will default to position given when creating new content
+      - {label: 'Map', name: 'geometry', widget: 'map', default: '{"type":"Point","coordinates":[-117.3918235,49.486667]}'} # will default to position given when creating new content
