Added to listing data model and using md

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,13 +1,14 @@
 backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
+local_backend: true # to run local back end: npx netlify-cms-proxy-server
 site_url: https://blewett-community-directory.netlify.app/
 media_folder: "static/images" # Media files will be stored in the public folder
 collections:
   - label: "Directory Listing" # Used in the UI - as in, this is the label the cms editor will see
     name: "listings" # Used in routes, e.g., /admin/collections/blog
     folder: "src/listings" # The path to the folder where the documents are stored
-    extension: html # determines the file extension searched for when finding existing entries in a folder collection and it determines the file extension used to save new collection items
+    extension: md # determines the file extension searched for when finding existing entries in a folder collection and it determines the file extension used to save new collection items
     create: true # Allow users to create new documents in this collection
     delete: true # prevents user from deleting items in collection
     fields: # The fields for each document, usually in front matter
@@ -15,4 +16,6 @@ collections:
       - {label: "Street Address", name: "address", widget: "string", required: false} # https://www.netlifycms.org/docs/widgets/
       - {label: "Website", name: "website", widget: "string", required: false}
       - {label: "Phone Number", name: "phone", widget: "string", pattern: ['^\d{3}-\d{3}-\d{4}$', 'Phone number must be 123-123-1234'], required: false}
+      - {label: "About", name: "about", widget: "text"}
+      - {label: " Social Media Links", name: "social", widget:  "list", default": ['facebook']}
       - {label: 'Map', name: 'geometry', widget: 'map', default: '{"type":"Point","coordinates":[-117.3918235,49.486667]}'} # will default to position given when creating new content
