--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Agata Zurek",
   "license": "MIT",
   "dependencies": {
-    "@11ty/eleventy": "^0.11.0"
+    "@11ty/eleventy": "^0.11.0",
+    "markdown-it": "^11.0.0"
   }
 }
