--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "A community directory of small businesses in Blewett, BC, Canada",
   "main": "index.js",
   "scripts": {
-    "start": "npx eleventy --serve",
-    "build": "eleventy"
+    "watch:sass": "sass --watch src/scss:src/static/css",
+    "build:sass": "sass src/scss:src/static/css",
+    "watch:eleventy": "eleventy --serve",
+    "build:eleventy": "eleventy",
+    "start": "npm-run-all build:sass --parallel watch:*",
+    "build": "npm-run-all build:*"
   },
   "author": "Agata Zurek",
   "license": "MIT",
   "dependencies": {
     "@11ty/eleventy": "^0.11.0",
-    "markdown-it": "^11.0.0"
+    "markdown-it": "^11.0.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.26.10"
   }
 }
