--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -21,7 +21,7 @@ collections:
         name: "category"
         widget: "select"
         multiple: true
-        options: ["Accommodation", "Cleaning Services", "Farm", "Flowers", "Graphic Design", "Handmade", "Music", "Photography", "Physiotherapy", "Riding School", "Technology", "Web", "Woodworking", "Yoga",]
+        options: ["Accommodation", "Cleaning Services", "Farm", "Flowers", "Graphic Design", "Handmade", "Music", "Photography", "Physiotherapy", "Riding School", "Technology", "Toys", "Web", "Woodworking", "Yoga",]
       - {label: "Street Address", name: "address", widget: "string", required: false} # https://www.netlifycms.org/docs/widgets/
       - {label: "Website", name: "website", widget: "string", required: false}
       - {label: "Phone Number", name: "phone", widget: "string", pattern: ['^\d{3}-\d{3}-\d{4}$', 'Phone number must be 123-123-1234'], required: false, hint: "Format 250-123-4567"}
