--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -14,14 +14,14 @@ collections:
     folder: "src/listings" # The path to the folder where the documents are stored
     extension: md # determines the file extension searched for when finding existing entries in a folder collection and it determines the file extension used to save new collection items
     create: true # Allow users to create new documents in this collection
-    delete: true # prevents user from deleting items in collection
+    delete: true # allows user to delete items in collection
     fields: # The fields for each document, usually in front matter
       - {label: "Business Name", name: "title", widget: "string"} # Widgets define the data type and interface for entry fields
       - label: "Business Category"
         name: "category"
         widget: "select"
         multiple: true
-        options: ["Accommodation", "Cleaning Services", "Contractors", "Farm", "Flowers", "Graphic Design", "Handmade", "Music", "Photography", "Physiotherapy", "Riding School", "Technology", "Toys", "Web", "Woodworking", "Yoga",]
+        options: ["Accommodation", "Cleaning Services", "Contractors", "Farm", "Flowers", "Graphic Design", "Handmade", "Health", "Music", "Photography", "Physiotherapy", "Riding School", "Technology", "Toys", "Web", "Woodworking", "Yoga",]
       - {label: "Street Address", name: "address", widget: "string", required: false} # https://www.netlifycms.org/docs/widgets/
       - {label: "Website", name: "website", widget: "string", required: false}
       - {label: "Phone Number", name: "phone", widget: "string", pattern: ['^\d{3}-\d{3}-\d{4}$', 'Phone number must be 123-123-1234'], required: false, hint: "Format 250-123-4567"}
