added "services" to list and icon

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -37,6 +37,7 @@ collections:
             'Photography',
             'Physiotherapy',
             'Riding School',
+            'Services',
             'Technology',
             'Toys',
             'Web',
